tests/chainsaw/restrict-cluster-label-service-priority/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-cluster-label-service-priority
spec:
  steps:
  - name: install-cluster-crd
    try:
    - apply:
        resource:
          apiVersion: apiextensions.k8s.io/v1
          kind: CustomResourceDefinition
          metadata:
            name: clusters.cluster.x-k8s.io
          spec:
            group: cluster.x-k8s.io
            names:
              kind: Cluster
              listKind: ClusterList
              plural: clusters
              singular: cluster
            scope: Namespaced
            versions:
            - name: v1beta1
              served: true
              storage: true
              schema:
                openAPIV3Schema:
                  type: object
                  x-kubernetes-preserve-unknown-fields: true
              subresources:
                status: {}
            - name: v1beta2
              served: true
              storage: false
              schema:
                openAPIV3Schema:
                  type: object
                  x-kubernetes-preserve-unknown-fields: true
              subresources:
                status: {}

  - name: check-policy-ready
    use:
      template: ../_steps-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: restrict-cluster-label-service-priority

  - name: allow-service-priority-highest
    try:
    - apply:
        resource:
          apiVersion: cluster.x-k8s.io/v1beta2
          kind: Cluster
          metadata:
            name: cluster-priority-highest
            labels:
              giantswarm.io/service-priority: highest
          spec: {}

  - name: allow-service-priority-medium
    try:
    - apply:
        resource:
          apiVersion: cluster.x-k8s.io/v1beta2
          kind: Cluster
          metadata:
            name: cluster-priority-medium
            labels:
              giantswarm.io/service-priority: medium
          spec: {}

  - name: allow-service-priority-lowest
    try:
    - apply:
        resource:
          apiVersion: cluster.x-k8s.io/v1beta2
          kind: Cluster
          metadata:
            name: cluster-priority-lowest
            labels:
              giantswarm.io/service-priority: lowest
          spec: {}

  - name: allow-no-service-priority-label
    try:
    - apply:
        resource:
          apiVersion: cluster.x-k8s.io/v1beta2
          kind: Cluster
          metadata:
            name: cluster-no-priority-label
          spec: {}

  - name: deny-invalid-service-priority
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        resource:
          apiVersion: cluster.x-k8s.io/v1beta2
          kind: Cluster
          metadata:
            name: cluster-priority-critical
            labels:
              giantswarm.io/service-priority: critical
          spec: {}
